<resources>
    <string name="app_name">Inventory</string>
    <string name="category_overview">Overview</string>
    <string name="hint_price">Price</string>
    <string name="label_quantity">Quantity In Stock</string>
    <string name="hint_quantity">0</string>
    <string name="hint_phone">Phone Number</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_inventory_items">Delete All Inventory Items</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="product">Product</string>
    <string name="hint_title">Title</string>
    <string name="hint_name">Name</string>
    <string name="supplier">Supplier</string>
    <string name="dollars">$</string>
    <string name="product_save_success_toast">Product saved</string>
    <string name="product_save_fail_toast">Error saving product</string>
    <string name="product_update_success_toast">Product updated</string>
    <string name="product_update_fail_toast">Error updating product</string>
    <string name="empty_view_title_text">Your shelves are looking\na little empty…</string>
    <string name="empty_view_subtitle_text">Get started by adding a product.</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_product_details">Product Details</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_edit_product">Edit Product Details</string>
    <string name="invalid_phone_error">Please enter a valid phone number!</string>
    <string name="in_stock">In Stock:&#160;</string>
    <string name="title">Title:&#160;</string>
    <string name="price">Price:  $</string>
    <string name="name">Name:&#160;</string>
    <string name="phone">Phone:&#160;</string>
    <string name="title_required_error">Title is required!</string>
    <string name="price_required_error">Price is required!</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="supplier_name_required_error">Supplier name is required!</string>
    <string name="supplier_phone_required_error">Supplier phone number is required!</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="price_text_view">Price:</string>
    <string name="in_stock_text_view">In Stock:</string>
    <string name="insert_menu_item">Insert</string>
</resources>
